# profileforge-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  conftest.py  docker-compose.dev.yml  docker-compose.yml  list_models.py  pyproject.toml  sync_jobs.py  test_ai.py
.github/workflows/: ci-cd.yml
apps/ai_engine/: assistant_service.py  jd_tailoring_service.py  models.py  services.py  urls.py  views.py
apps/ai_engine/migrations/: 0001_initial.py  0002_aifeature_choices.py
apps/ai_engine/providers/: anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
apps/ai_engine/tests/: test_ai_engine.py
apps/authentication/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_user_last_name_optional.py
apps/authentication/tests/: test_auth.py  test_security_remediations.py
apps/career_hub/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/career_hub/migrations/: 0001_initial.py  0002_jobrecommendation_score_breakdown.py  0003_job_description_2000.py  0004_resumematchscore.py
apps/career_hub/providers/: adzuna.py  base.py
apps/career_hub/services/: api_services.py  match_resources.py  match_scoring.py  match_service.py  recommendations.py  scoring.py  search.py  skill_gap_service.py  sync.py
apps/career_hub/tests/: test_adzuna_provider.py  test_api_services.py  test_job_api.py  test_match_resources.py  test_match_score_api.py  test_match_scoring.py  test_recommendation_api.py  test_recommendation_service.py  test_recommendation_task.py  test_saved_jobs_api.py  test_scoring_service.py  test_search_service.py  test_skill_gap_api.py  test_skill_gap_service.py  test_sync_integration.py  test_sync_service.py  test_sync_task.py  test_throttle.py
apps/contract_tests/: test_api_contracts.py
apps/cover_letters/: models.py  serializers.py  services.py  urls.py  views.py
apps/cover_letters/migrations/: 0001_initial.py
apps/cover_letters/tests/: test_cover_letters.py
apps/exports/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/imports/: file_validator.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/portfolios/: analytics.py  models.py  public_urls.py  serializers.py  services.py  urls.py  views.py
apps/profiles/: admin.py  models.py  profile_utils.py  serializers.py  services.py  urls.py  views.py
apps/resumes/: ai_optimization_service.py  models.py  optimization_analyzer.py  optimization_service.py  serializers.py  services.py  urls.py  views.py
apps/security_tests/: test_security.py
apps/templates_engine/: models.py  serializers.py  services.py  urls.py  views.py
celery_app/: __init__.py  app.py
celery_app/tasks/: ai_tasks.py  career_hub_tasks.py  export_tasks.py  import_tasks.py  portfolio_tasks.py  resume_tasks.py
celery_app/tests/: test_tasks.py
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  development.py  local.py  production.py  staging.py  test.py
core/: audit.py  authentication.py  config_validator.py  crypto.py  exceptions.py  health_urls.py  health_views.py  metrics.py  middleware.py  mixins.py  models.py  pagination.py  security.py  throttles.py  tracing.py
core/migrations/: 0001_initial.py
core/tests/: test_security_remediations.py
jenkins/: Jenkinsfile
requirements/: base.txt  development.txt  production.txt
scripts/: verify_contract.ps1
storage/: __init__.py  base.py  gcs_backend.py  s3_backend.py
(+54 files in other folders)
